Fixing alignment for smallest iphone width

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body,
 html {
   height: 100%;
   margin: 0;
-  padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .hero-image {
@@ -44,6 +43,11 @@ html {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+@media (max-width: 320px) {
+  .hero-text {
+    transform: translate(-50%, -50%) scale(0.7);
+  }
+}
 
 .hero-text .upper-dash {
   margin-right: 10px;
@@ -57,6 +61,11 @@ html {
   position: absolute;
   right: -132px;
   bottom: 40%;
+}
+@media (max-width: 768px) {
+  .vertical-text {
+    transform: scale(0.37) rotate(-90deg);
+  }
 }
 .container-fluid {
   margin-top: 30px;
@@ -87,10 +96,16 @@ a:focus {
   margin-top: 25px;
 }
 .items .img {
-  height: 185px;
+  height: 200px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
+  background-color: #fff;
+}
+@media (min-width: 768px) {
+  .items .img {
+    height: 120px;
+  }
 }
 .items .title {
   margin-bottom: 0px;
@@ -176,7 +191,7 @@ a:focus {
   color: black;
 }
 .footer {
-  margin-top: 20%;
+  margin-top: 10%;
 }
 .footer .group {
   margin-bottom: 40px;
